# ChangeLog for dev-python/futures
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/futures/ChangeLog,v 1.9 2014/01/23 02:32:24 radhermit Exp $

*futures-2.1.6 (23 Jan 2014)

  23 Jan 2014; Tim Harder <radhermit@gentoo.org> +futures-2.1.6.ebuild:
  Version bump.

*futures-2.1.5 (05 Dec 2013)

  05 Dec 2013; Tim Harder <radhermit@gentoo.org> +futures-2.1.5.ebuild:
  Version bump.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> futures-2.1.4.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  08 Aug 2013; Tim Harder <radhermit@gentoo.org> -futures-2.1.2.ebuild,
  -futures-2.1.3.ebuild, -futures-2.1.3-r1.ebuild, futures-2.1.4.ebuild:
  Remove old and minor cleanup.

*futures-2.1.4 (05 Jul 2013)

  05 Jul 2013; Ian Delaney <idella4@gentoo.org> +futures-2.1.4.ebuild:
  bump; custom tarball prepared, version tarball topped up and located in
  devspace, fixes Bug #474688

  05 Apr 2013; Mike Gilbert <floppym@gentoo.org> futures-2.1.3-r1.ebuild:
  Fixup distutils-r1 conversion.

*futures-2.1.3-r1 (05 Apr 2013)

  05 Apr 2013; Ian Delaney <idella4@gentoo.org> +futures-2.1.3-r1.ebuild,
  futures-2.1.3.ebuild:
  migration revbump + added IUSE doc

*futures-2.1.3 (29 Aug 2012)

  29 Aug 2012; Patrick Lauer <patrick@gentoo.org> +futures-2.1.3.ebuild:
  Bump

*futures-2.1.2 (17 Mar 2012)

  17 Mar 2012; Tim Harder <radhermit@gentoo.org> +futures-2.1.2.ebuild,
  +metadata.xml:
  Initial import. Ebuild by me.