@@ -6,17 +6,13 @@ DIST futures-2.1.5.tar.gz 25962 SHA256 735b751d66ad20071adf32f7399f6f177f3b46ff1
 DIST futures-2.1.6.tar.gz 26445 SHA256 33f39102b631fa0a030b24c4341ba1f48558e435946d6735d47fe1f739d757c4 SHA512 1563dcfbcdcfe02a5b3d955d88f91a76e802292ab603acde8962a5f7562b3f4a4534e01217eb1d82a5368c98364abf34d2cd899b093594905e071c31ed1d4a34 WHIRLPOOL 88b0e14f9039944b0bdb6516155e4a715f797a2836f923776a3e2834190ca4ba7596ff82db596a6024b3edb033378a0361a54adaf6f4b8fe48ef409956cb7fad
 EBUILD futures-2.1.4.ebuild 945 SHA256 19317d0a6f0f73d689e3a02eccefcd0112aa7c87eca48ef82f75f62b98a92788 SHA512 34b4894d4ba401a16b405a4889c8e200ae8876532faa5104daca71545875fb53b404aae4b681ef2e3d4fac8cdeb4e420eaaafefae808af4fa22e56840972ec74 WHIRLPOOL 77437d440991ca24a7c6eb422b0ab38586b27faf34ecac26bfcff8a88b38e3f44811b0c4bc95177a50a1497c322bc2c46ef573517a30cd6394536c79edecd235
 EBUILD futures-2.1.5.ebuild 1031 SHA256 2d1617466bfb9634bebeb549ee45071127bf8f6a2c61a1b11670302838f18569 SHA512 18e3fcef29a94f1a90cd44dfb545bcfb0c281b5ffad2ee181f576f20b3a0e1d0f1518980593588c8d813a7b8dc1b6abf5877a129f11ec6b5fe6d185e311c024c WHIRLPOOL 44a107c68d79054fc5eb0ffdeabeb485635646725cc04380fec8aa6578e8156f3f9de6a5c5d8d92cc818d690aaf092a2894ce6b699bdaafb96c8d57499f1b2fe
-EBUILD futures-2.1.6.ebuild 929 SHA256 724a4c74e63caf139e3afd4e509ee93e4a16f050dd31dc73f5602f3b505820f6 SHA512 3035c90493750fb8ea806cfc50bff41c9c135f2dfb4f253f21e6a2564f9829e24c7bb9529733448c4f7d7d4e5adb3c4a379dd769ab7000379c66a29d2ed02a4f WHIRLPOOL cf7e4a579ff9f6149190f8f5abbddf6cf0e564de0b40ea5b2b5d99aff3e93e19b7504d9cda550b7f32a50173f575f1c8a6541014af0c3bf89ed4ab141dea85dd
-MISC ChangeLog 1497 SHA256 01e3dc762ca82408bd2bff90da75ad7204f4900f24251b15ebc3b251a62b7bbf SHA512 06811fa067efd9a98c79117ef1f4a8c402b2dd7e49c37fea0ea1042205520d4579f7167873f59a51bc8f0b5fd0e2c115e8360f30b5ce9378c062ee1b9f6a5e36 WHIRLPOOL c84e47a22a9f96b0239876fd625e54c67cf120c1c957cbd4019671ff9a4225d15baf5596c0d1be6540aad63527eccb5aa243ea626e240f342da4e4665e4a48cb
+EBUILD futures-2.1.6.ebuild 1208 SHA256 bc5927eeaf5d286b158eec5a74e0e6d79b95729c59c7b6fecac6a07e0ebb0705 SHA512 b4d827b0940ac13c936ea29b2489b78d77eab4e948c8b6b01b9b81cd4b4af085c5c82ea6ecf9ef1ea1bce468567c8c4296f875bd406e11c8603d2032848f3ead WHIRLPOOL 83b01c22b4df80cf1347730332fb9a10dd101223aea54488a1eb894e9a178fe78d7768c28af2603bc3fb9c9ac788b172dec08bdf87bab1ddc4293c62caca3f6d
+MISC ChangeLog 1617 SHA256 27e2d3a4d34bb26be61543f2ae571bdf000e1f0d279b7933791eac702680320d SHA512 5c976f0576485e68f9b99151c83e472a64abd0d520605ae52a6cff8a05a95d91cd55b263b0e2b6b2f96a47e2a5f864efa7318edc87ab2d1bac1adf848c6f2550 WHIRLPOOL 0362f1584ced0abb90a76568f854c68c1cc338e9ba60c56dd8a98bf4f4705ec7a8f83ed2fc3e49109bee309a258fada1fbc855cb152295a3cc1b481812d9828e
 MISC metadata.xml 230 SHA256 24e1e0ac25023b4ffa2df94267196ae0a779b8c0fb6d86212c51097937b6209b SHA512 c269a4a9029e1d19f97b4d15f45d57c1b31bf75ef86fccb70534d57a19ee42dd62d76b58b5a30f01e8534364d0b8467ce8828df829a139d68e19ada0b433f041 WHIRLPOOL 61b293453ebcea7a5a34cc4fc26e2cbe73982dd52d758f729b32bfd1b02c477f59ef9206a219423be1b33b35d8ac6164231a4ec558ef7adb08b1faeb8b7acdad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJS4H85AAoJEEqz6FtPBkyjWDkIAI/CHb2mLCfniaLNXTDOF7NK
-typCJIXBuvVtbJt2p0QNVO5gk0LyBu7h0nYaSDFM456fxyLoyISG6+9rkWTTb+r1
-iIXOcSw7naFqdCDH54aRZbm0k0uSJmuKGlvNXE3S2eNsOWPdCprMmM3h5QmW+vFx
-xVR9CN5k0dYk4qVuTv00q0QvxaDK6YH3uwsZlG4LIARdmH30CTpntHGqwdq+RG7D
-HCkrfN5EGcbw+OgC+pUfmNVCr+iFmJEwdRWXcet/QkQ/0lis3xTW06+lgiPE2joG
-dUd6BrjOeiEnvGrxvVUAAHChhBsSPQ+tzeAbnSwZeqZhrUe4UX8QuDpAQc0IPvI=
-=47Us
+iEYEAREIAAYFAlNnFwwACgkQso7CE7gHKw3FlQCfUD78i5otfcvEBLuGUe0LZBGx
+YDYAoNXb8JPRgwoq4TsL8qO/gbeCQGe+
+=GhcO
 -----END PGP SIGNATURE-----
