@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/futures
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/futures/ChangeLog,v 1.9 2014/01/23 02:32:24 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/futures/ChangeLog,v 1.10 2014/05/05 04:51:22 idella4 Exp $
+
+  05 May 2014; Ian Delaney <idella4@gentoo.org> futures-2.1.6.ebuild:
+  drop py2.6 add pypy support, upgrade test phase
 
 *futures-2.1.6 (23 Jan 2014)
 
